// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Usage Snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-151 makeStyles-item-149"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MyClass MuiButton-containedPrimary Mui-disabled MuiButton-fullWidth Mui-disabled"
      data-testid="submit-button"
      disabled=""
      tabindex="-1"
      type="submit"
    >
      <span
        class="MuiButton-label"
      >
        MyLabel
        <div
          class="MuiCircularProgress-root makeStyles-progress-152 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style="width: 20px; height: 20px;"
        >
          <svg
            class="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Expansion Usage Snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-294 makeStyles-item-292"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
      data-testid="submit-button"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
